[WCMSFEQ-158] - Fixed spacing issue for the carousel organization titles.

--- a/CancerGov/_src/StyleSheets/_home.scss
+++ b/CancerGov/_src/StyleSheets/_home.scss
@@ -2,8 +2,6 @@
 // overriding default spacing for p tags for the home/landing pages
 .ncilandingpage p, .ncihome p {
 	margin: 0.5em 0;
-	background: pink;
-	border: 2px solid orange;
 }
 
 /* BEGIN Hero Section */
